cmd/ql/y.output

state 0
	$accept: .start $end 
	start: .    (2)
	optin: .    (16)

	$end  reduce 2 (src line 31)
	error  shift 7
	FOR  reduce 16 (src line 102)
	WHILE  reduce 16 (src line 102)
	FUNC  shift 10
	NL  shift 11
	LEN  reduce 16 (src line 102)
	SINGLE  reduce 16 (src line 102)
	COND  reduce 16 (src line 102)
	PIPE  shift 14
	IREDIR  shift 9
	NAME  reduce 16 (src line 102)
	INBLK  reduce 16 (src line 102)
	OUTBLK  reduce 16 (src line 102)
	'{'  reduce 16 (src line 102)
	'('  reduce 16 (src line 102)
	';'  shift 12
	'$'  reduce 16 (src line 102)
	.  error

	bgpipe  goto 4
	pipe  goto 8
	func  goto 5
	optin  goto 13
	start  goto 1
	topcmds  goto 2
	topcmd  goto 3
	sep  goto 6

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  topcmds.    (1)
	topcmds:  topcmds.topcmd 
	optin: .    (16)

	$end  reduce 1 (src line 29)
	error  shift 7
	FOR  reduce 16 (src line 102)
	WHILE  reduce 16 (src line 102)
	FUNC  shift 10
	NL  shift 11
	LEN  reduce 16 (src line 102)
	SINGLE  reduce 16 (src line 102)
	COND  reduce 16 (src line 102)
	PIPE  shift 14
	IREDIR  shift 9
	NAME  reduce 16 (src line 102)
	INBLK  reduce 16 (src line 102)
	OUTBLK  reduce 16 (src line 102)
	'{'  reduce 16 (src line 102)
	'('  reduce 16 (src line 102)
	';'  shift 12
	'$'  reduce 16 (src line 102)
	.  error

	bgpipe  goto 4
	pipe  goto 8
	func  goto 5
	optin  goto 13
	topcmd  goto 15
	sep  goto 6

state 3
	topcmds:  topcmd.    (4)

	.  reduce 4 (src line 36)


state 4
	topcmd:  bgpipe.sep 

	NL  shift 11
	';'  shift 12
	.  error

	sep  goto 16

state 5
	topcmd:  func.sep 

	NL  shift 11
	';'  shift 12
	.  error

	sep  goto 17

state 6
	topcmd:  sep.    (7)

	.  reduce 7 (src line 49)


state 7
	topcmd:  error.NL 

	NL  shift 18
	.  error


state 8
	bgpipe:  pipe.optbg 
	optbg: .    (13)

	BG  shift 20
	.  reduce 13 (src line 81)

	optbg  goto 19

state 9
	bgpipe:  IREDIR.name 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	'$'  shift 23
	.  error

	name  goto 21

state 10
	func:  FUNC.NAME '{' optsep blkcmds optsep '}' 

	NAME  shift 26
	.  error


state 11
	sep:  NL.    (41)

	.  reduce 41 (src line 224)


state 12
	sep:  ';'.    (42)

	.  reduce 42 (src line 226)


state 13
	pipe:  optin.spipe 

	FOR  shift 31
	WHILE  shift 32
	LEN  shift 25
	SINGLE  shift 24
	COND  shift 36
	NAME  shift 37
	INBLK  shift 41
	OUTBLK  shift 42
	'{'  shift 30
	'('  shift 40
	'$'  shift 23
	.  error

	name  goto 38
	names  goto 29
	cmd  goto 28
	list  goto 39
	nameel  goto 35
	spipe  goto 27
	cond  goto 33
	setvar  goto 34

state 14
	optin:  PIPE.    (15)

	.  reduce 15 (src line 97)


state 15
	topcmds:  topcmds topcmd.    (3)

	.  reduce 3 (src line 34)


state 16
	topcmd:  bgpipe sep.    (5)

	.  reduce 5 (src line 40)


state 17
	topcmd:  func sep.    (6)

	.  reduce 6 (src line 45)


state 18
	topcmd:  error NL.    (8)

	.  reduce 8 (src line 50)


state 19
	bgpipe:  pipe optbg.    (10)

	.  reduce 10 (src line 67)


state 20
	optbg:  BG.    (12)

	.  reduce 12 (src line 79)


state 21
	bgpipe:  IREDIR name.    (11)

	.  reduce 11 (src line 73)


state 22
	name:  NAME.    (59)

	.  reduce 59 (src line 309)


state 23
	name:  '$'.NAME 
	name:  '$'.NAME '[' name ']' 

	NAME  shift 43
	.  error


state 24
	name:  SINGLE.NAME 
	name:  SINGLE.NAME '[' name ']' 

	NAME  shift 44
	.  error


state 25
	name:  LEN.NAME 

	NAME  shift 45
	.  error


state 26
	func:  FUNC NAME.'{' optsep blkcmds optsep '}' 

	'{'  shift 46
	.  error


state 27
	pipe:  optin spipe.    (14)
	spipe:  spipe.PIPE cmd 

	PIPE  shift 47
	.  reduce 14 (src line 87)


state 28
	spipe:  cmd.    (18)

	.  reduce 18 (src line 114)


state 29
	cmd:  names.optredirs 
	names:  names.nameel 
	optredirs: .    (35)

	LEN  shift 25
	SINGLE  shift 24
	IREDIR  shift 52
	OREDIR  shift 53
	APP  shift 54
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'$'  shift 23
	.  reduce 35 (src line 193)

	name  goto 38
	list  goto 39
	nameel  goto 49
	redir  goto 51
	redirs  goto 50
	optredirs  goto 48

state 30
	cmd:  '{'.optsep blkcmds optsep '}' optredirs 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 56
	optsep  goto 55

state 31
	cmd:  FOR.names '{' optsep blkcmds optsep '}' optredirs 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'$'  shift 23
	.  error

	name  goto 38
	names  goto 57
	list  goto 39
	nameel  goto 35

state 32
	cmd:  WHILE.pipe '{' optsep blkcmds optsep '}' optredirs 
	optin: .    (16)

	PIPE  shift 14
	.  reduce 16 (src line 102)

	pipe  goto 58
	optin  goto 13

state 33
	cmd:  cond.optredirs 
	cond:  cond.OR '{' optsep blkcmds optsep '}' 
	optredirs: .    (35)

	OR  shift 60
	IREDIR  shift 52
	OREDIR  shift 53
	APP  shift 54
	.  reduce 35 (src line 193)

	redir  goto 51
	redirs  goto 50
	optredirs  goto 59

state 34
	cmd:  setvar.    (24)

	.  reduce 24 (src line 143)


state 35
	names:  nameel.    (46)

	.  reduce 46 (src line 239)


state 36
	cond:  COND.'{' optsep blkcmds optsep '}' 

	'{'  shift 61
	.  error


state 37
	setvar:  NAME.as names 
	setvar:  NAME.as '(' mapels ')' 
	setvar:  NAME.'[' name ']' as names 
	name:  NAME.    (59)

	'['  shift 63
	'='  shift 64
	'←'  shift 65
	.  reduce 59 (src line 309)

	as  goto 62

state 38
	nameel:  name.    (47)
	list:  name.'^' list 

	'^'  shift 66
	.  reduce 47 (src line 245)


state 39
	nameel:  list.    (48)
	list:  list.'^' name 
	list:  list.'^' list 

	'^'  shift 67
	.  reduce 48 (src line 247)


state 40
	list:  '('.optnames ')' 
	optnames: .    (58)

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'$'  shift 23
	.  reduce 58 (src line 304)

	name  goto 38
	names  goto 69
	optnames  goto 68
	list  goto 39
	nameel  goto 35

state 41
	list:  INBLK.optsep blkcmds optsep '}' 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 56
	optsep  goto 70

state 42
	list:  OUTBLK.optsep blkcmds optsep '}' 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 56
	optsep  goto 71

state 43
	name:  '$' NAME.    (60)
	name:  '$' NAME.'[' name ']' 

	'['  shift 72
	.  reduce 60 (src line 314)


state 44
	name:  SINGLE NAME.    (61)
	name:  SINGLE NAME.'[' name ']' 

	'['  shift 73
	.  reduce 61 (src line 318)


state 45
	name:  LEN NAME.    (64)

	.  reduce 64 (src line 330)


state 46
	func:  FUNC NAME '{'.optsep blkcmds optsep '}' 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 56
	optsep  goto 74

state 47
	spipe:  spipe PIPE.cmd 

	FOR  shift 31
	WHILE  shift 32
	LEN  shift 25
	SINGLE  shift 24
	COND  shift 36
	NAME  shift 37
	INBLK  shift 41
	OUTBLK  shift 42
	'{'  shift 30
	'('  shift 40
	'$'  shift 23
	.  error

	name  goto 38
	names  goto 29
	cmd  goto 75
	list  goto 39
	nameel  goto 35
	cond  goto 33
	setvar  goto 34

state 48
	cmd:  names optredirs.    (19)

	.  reduce 19 (src line 120)


state 49
	names:  names nameel.    (45)

	.  reduce 45 (src line 234)


state 50
	optredirs:  redirs.    (34)
	redirs:  redirs.redir 

	IREDIR  shift 52
	OREDIR  shift 53
	APP  shift 54
	.  reduce 34 (src line 191)

	redir  goto 76

state 51
	redirs:  redir.    (37)

	.  reduce 37 (src line 204)


state 52
	redir:  IREDIR.name 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	'$'  shift 23
	.  error

	name  goto 77

state 53
	redir:  OREDIR.name 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	'$'  shift 23
	.  error

	name  goto 78

state 54
	redir:  APP.name 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	'$'  shift 23
	.  error

	name  goto 79

state 55
	cmd:  '{' optsep.blkcmds optsep '}' optredirs 
	optin: .    (16)

	PIPE  shift 14
	IREDIR  shift 9
	.  reduce 16 (src line 102)

	bgpipe  goto 81
	pipe  goto 8
	blkcmds  goto 80
	optin  goto 13

state 56
	optsep:  sep.    (43)

	.  reduce 43 (src line 229)


state 57
	cmd:  FOR names.'{' optsep blkcmds optsep '}' optredirs 
	names:  names.nameel 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'{'  shift 82
	'('  shift 40
	'$'  shift 23
	.  error

	name  goto 38
	list  goto 39
	nameel  goto 49

state 58
	cmd:  WHILE pipe.'{' optsep blkcmds optsep '}' optredirs 

	'{'  shift 83
	.  error


state 59
	cmd:  cond optredirs.    (23)

	.  reduce 23 (src line 139)


state 60
	cond:  cond OR.'{' optsep blkcmds optsep '}' 

	'{'  shift 84
	.  error


state 61
	cond:  COND '{'.optsep blkcmds optsep '}' 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 56
	optsep  goto 85

state 62
	setvar:  NAME as.names 
	setvar:  NAME as.'(' mapels ')' 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 87
	'$'  shift 23
	.  error

	name  goto 38
	names  goto 86
	list  goto 39
	nameel  goto 35

state 63
	setvar:  NAME '['.name ']' as names 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	'$'  shift 23
	.  error

	name  goto 88

state 64
	as:  '='.    (28)

	.  reduce 28 (src line 161)


state 65
	as:  '←'.    (29)

	.  reduce 29 (src line 163)


state 66
	list:  name '^'.list 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'$'  shift 23
	.  error

	name  goto 90
	list  goto 89

state 67
	list:  list '^'.name 
	list:  list '^'.list 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'$'  shift 23
	.  error

	name  goto 91
	list  goto 92

state 68
	list:  '(' optnames.')' 

	')'  shift 93
	.  error


state 69
	names:  names.nameel 
	optnames:  names.    (57)

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'$'  shift 23
	.  reduce 57 (src line 302)

	name  goto 38
	list  goto 39
	nameel  goto 49

state 70
	list:  INBLK optsep.blkcmds optsep '}' 
	optin: .    (16)

	PIPE  shift 14
	IREDIR  shift 9
	.  reduce 16 (src line 102)

	bgpipe  goto 81
	pipe  goto 8
	blkcmds  goto 94
	optin  goto 13

state 71
	list:  OUTBLK optsep.blkcmds optsep '}' 
	optin: .    (16)

	PIPE  shift 14
	IREDIR  shift 9
	.  reduce 16 (src line 102)

	bgpipe  goto 81
	pipe  goto 8
	blkcmds  goto 95
	optin  goto 13

state 72
	name:  '$' NAME '['.name ']' 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	'$'  shift 23
	.  error

	name  goto 96

state 73
	name:  SINGLE NAME '['.name ']' 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	'$'  shift 23
	.  error

	name  goto 97

state 74
	func:  FUNC NAME '{' optsep.blkcmds optsep '}' 
	optin: .    (16)

	PIPE  shift 14
	IREDIR  shift 9
	.  reduce 16 (src line 102)

	bgpipe  goto 81
	pipe  goto 8
	blkcmds  goto 98
	optin  goto 13

state 75
	spipe:  spipe PIPE cmd.    (17)

	.  reduce 17 (src line 108)


state 76
	redirs:  redirs redir.    (36)

	.  reduce 36 (src line 199)


state 77
	redir:  IREDIR name.    (38)

	.  reduce 38 (src line 210)


state 78
	redir:  OREDIR name.    (39)

	.  reduce 39 (src line 215)


state 79
	redir:  APP name.    (40)

	.  reduce 40 (src line 219)


state 80
	cmd:  '{' optsep blkcmds.optsep '}' optredirs 
	blkcmds:  blkcmds.sep bgpipe 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 100
	optsep  goto 99

state 81
	blkcmds:  bgpipe.    (33)

	.  reduce 33 (src line 185)


state 82
	cmd:  FOR names '{'.optsep blkcmds optsep '}' optredirs 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 56
	optsep  goto 101

state 83
	cmd:  WHILE pipe '{'.optsep blkcmds optsep '}' optredirs 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 56
	optsep  goto 102

state 84
	cond:  cond OR '{'.optsep blkcmds optsep '}' 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 56
	optsep  goto 103

state 85
	cond:  COND '{' optsep.blkcmds optsep '}' 
	optin: .    (16)

	PIPE  shift 14
	IREDIR  shift 9
	.  reduce 16 (src line 102)

	bgpipe  goto 81
	pipe  goto 8
	blkcmds  goto 104
	optin  goto 13

state 86
	setvar:  NAME as names.    (25)
	names:  names.nameel 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'$'  shift 23
	.  reduce 25 (src line 146)

	name  goto 38
	list  goto 39
	nameel  goto 49

state 87
	setvar:  NAME as '('.mapels ')' 
	list:  '('.optnames ')' 
	optnames: .    (58)

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'['  shift 106
	'$'  shift 23
	.  reduce 58 (src line 304)

	name  goto 38
	names  goto 69
	optnames  goto 68
	list  goto 39
	nameel  goto 35
	mapels  goto 105

state 88
	setvar:  NAME '[' name.']' as names 

	']'  shift 107
	.  error


state 89
	list:  name '^' list.    (50)
	list:  list.'^' name 
	list:  list.'^' list 

	.  reduce 50 (src line 254)


state 90
	list:  name.'^' list 

	'^'  shift 66
	.  error


state 91
	list:  name.'^' list 
	list:  list '^' name.    (51)

	.  reduce 51 (src line 259)


state 92
	list:  list.'^' name 
	list:  list.'^' list 
	list:  list '^' list.    (52)

	.  reduce 52 (src line 264)


state 93
	list:  '(' optnames ')'.    (49)

	.  reduce 49 (src line 249)


state 94
	blkcmds:  blkcmds.sep bgpipe 
	list:  INBLK optsep blkcmds.optsep '}' 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 100
	optsep  goto 108

state 95
	blkcmds:  blkcmds.sep bgpipe 
	list:  OUTBLK optsep blkcmds.optsep '}' 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 100
	optsep  goto 109

state 96
	name:  '$' NAME '[' name.']' 

	']'  shift 110
	.  error


state 97
	name:  SINGLE NAME '[' name.']' 

	']'  shift 111
	.  error


state 98
	func:  FUNC NAME '{' optsep blkcmds.optsep '}' 
	blkcmds:  blkcmds.sep bgpipe 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 100
	optsep  goto 112

state 99
	cmd:  '{' optsep blkcmds optsep.'}' optredirs 

	'}'  shift 113
	.  error


state 100
	blkcmds:  blkcmds sep.bgpipe 
	optsep:  sep.    (43)
	optin: .    (16)

	PIPE  shift 14
	IREDIR  shift 9
	'}'  reduce 43 (src line 229)
	.  reduce 16 (src line 102)

	bgpipe  goto 114
	pipe  goto 8
	optin  goto 13

state 101
	cmd:  FOR names '{' optsep.blkcmds optsep '}' optredirs 
	optin: .    (16)

	PIPE  shift 14
	IREDIR  shift 9
	.  reduce 16 (src line 102)

	bgpipe  goto 81
	pipe  goto 8
	blkcmds  goto 115
	optin  goto 13

state 102
	cmd:  WHILE pipe '{' optsep.blkcmds optsep '}' optredirs 
	optin: .    (16)

	PIPE  shift 14
	IREDIR  shift 9
	.  reduce 16 (src line 102)

	bgpipe  goto 81
	pipe  goto 8
	blkcmds  goto 116
	optin  goto 13

state 103
	cond:  cond OR '{' optsep.blkcmds optsep '}' 
	optin: .    (16)

	PIPE  shift 14
	IREDIR  shift 9
	.  reduce 16 (src line 102)

	bgpipe  goto 81
	pipe  goto 8
	blkcmds  goto 117
	optin  goto 13

state 104
	cond:  COND '{' optsep blkcmds.optsep '}' 
	blkcmds:  blkcmds.sep bgpipe 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 100
	optsep  goto 118

state 105
	setvar:  NAME as '(' mapels.')' 
	mapels:  mapels.'[' names ']' 

	')'  shift 119
	'['  shift 120
	.  error


state 106
	mapels:  '['.names ']' 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'$'  shift 23
	.  error

	name  goto 38
	names  goto 121
	list  goto 39
	nameel  goto 35

state 107
	setvar:  NAME '[' name ']'.as names 

	'='  shift 64
	'←'  shift 65
	.  error

	as  goto 122

state 108
	list:  INBLK optsep blkcmds optsep.'}' 

	'}'  shift 123
	.  error


state 109
	list:  OUTBLK optsep blkcmds optsep.'}' 

	'}'  shift 124
	.  error


state 110
	name:  '$' NAME '[' name ']'.    (62)

	.  reduce 62 (src line 322)


state 111
	name:  SINGLE NAME '[' name ']'.    (63)

	.  reduce 63 (src line 326)


state 112
	func:  FUNC NAME '{' optsep blkcmds optsep.'}' 

	'}'  shift 125
	.  error


state 113
	cmd:  '{' optsep blkcmds optsep '}'.optredirs 
	optredirs: .    (35)

	IREDIR  shift 52
	OREDIR  shift 53
	APP  shift 54
	.  reduce 35 (src line 193)

	redir  goto 51
	redirs  goto 50
	optredirs  goto 126

state 114
	blkcmds:  blkcmds sep bgpipe.    (32)

	.  reduce 32 (src line 180)


state 115
	cmd:  FOR names '{' optsep blkcmds.optsep '}' optredirs 
	blkcmds:  blkcmds.sep bgpipe 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 100
	optsep  goto 127

state 116
	cmd:  WHILE pipe '{' optsep blkcmds.optsep '}' optredirs 
	blkcmds:  blkcmds.sep bgpipe 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 100
	optsep  goto 128

state 117
	cond:  cond OR '{' optsep blkcmds.optsep '}' 
	blkcmds:  blkcmds.sep bgpipe 
	optsep: .    (44)

	NL  shift 11
	';'  shift 12
	.  reduce 44 (src line 231)

	sep  goto 100
	optsep  goto 129

state 118
	cond:  COND '{' optsep blkcmds optsep.'}' 

	'}'  shift 130
	.  error


state 119
	setvar:  NAME as '(' mapels ')'.    (26)

	.  reduce 26 (src line 151)


state 120
	mapels:  mapels '['.names ']' 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'$'  shift 23
	.  error

	name  goto 38
	names  goto 131
	list  goto 39
	nameel  goto 35

state 121
	names:  names.nameel 
	mapels:  '[' names.']' 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	']'  shift 132
	'$'  shift 23
	.  error

	name  goto 38
	list  goto 39
	nameel  goto 49

state 122
	setvar:  NAME '[' name ']' as.names 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'$'  shift 23
	.  error

	name  goto 38
	names  goto 133
	list  goto 39
	nameel  goto 35

state 123
	list:  INBLK optsep blkcmds optsep '}'.    (53)

	.  reduce 53 (src line 268)


state 124
	list:  OUTBLK optsep blkcmds optsep '}'.    (54)

	.  reduce 54 (src line 278)


state 125
	func:  FUNC NAME '{' optsep blkcmds optsep '}'.    (9)

	.  reduce 9 (src line 60)


state 126
	cmd:  '{' optsep blkcmds optsep '}' optredirs.    (20)

	.  reduce 20 (src line 125)


state 127
	cmd:  FOR names '{' optsep blkcmds optsep.'}' optredirs 

	'}'  shift 134
	.  error


state 128
	cmd:  WHILE pipe '{' optsep blkcmds optsep.'}' optredirs 

	'}'  shift 135
	.  error


state 129
	cond:  cond OR '{' optsep blkcmds optsep.'}' 

	'}'  shift 136
	.  error


state 130
	cond:  COND '{' optsep blkcmds optsep '}'.    (30)

	.  reduce 30 (src line 166)


state 131
	names:  names.nameel 
	mapels:  mapels '[' names.']' 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	']'  shift 137
	'$'  shift 23
	.  error

	name  goto 38
	list  goto 39
	nameel  goto 49

state 132
	mapels:  '[' names ']'.    (56)

	.  reduce 56 (src line 295)


state 133
	setvar:  NAME '[' name ']' as names.    (27)
	names:  names.nameel 

	LEN  shift 25
	SINGLE  shift 24
	NAME  shift 22
	INBLK  shift 41
	OUTBLK  shift 42
	'('  shift 40
	'$'  shift 23
	.  reduce 27 (src line 156)

	name  goto 38
	list  goto 39
	nameel  goto 49

state 134
	cmd:  FOR names '{' optsep blkcmds optsep '}'.optredirs 
	optredirs: .    (35)

	IREDIR  shift 52
	OREDIR  shift 53
	APP  shift 54
	.  reduce 35 (src line 193)

	redir  goto 51
	redirs  goto 50
	optredirs  goto 138

state 135
	cmd:  WHILE pipe '{' optsep blkcmds optsep '}'.optredirs 
	optredirs: .    (35)

	IREDIR  shift 52
	OREDIR  shift 53
	APP  shift 54
	.  reduce 35 (src line 193)

	redir  goto 51
	redirs  goto 50
	optredirs  goto 139

state 136
	cond:  cond OR '{' optsep blkcmds optsep '}'.    (31)

	.  reduce 31 (src line 173)


state 137
	mapels:  mapels '[' names ']'.    (55)

	.  reduce 55 (src line 290)


state 138
	cmd:  FOR names '{' optsep blkcmds optsep '}' optredirs.    (21)

	.  reduce 21 (src line 129)


state 139
	cmd:  WHILE pipe '{' optsep blkcmds optsep '}' optredirs.    (22)

	.  reduce 22 (src line 134)


32 terminals, 26 nonterminals
65 grammar rules, 140/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
75 working sets used
memory: parser 170/30000
107 extra closures
287 shift entries, 26 exceptions
96 goto entries
86 entries saved by goto default
Optimizer space used: output 257/30000
257 table entries, 38 zero
maximum spread: 32, maximum offset: 135
